all the categories zones ad device is done with each of create delete update insert

--- a/Category/.local/ProjectSettings.json
+++ b/Category/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"OpenedDocuments":"[\"Main.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}","ProjectActivitiesViewState":"{}"}
+{"OpenedDocuments":"[\"update (2).xaml\"]","ProjectBreakpoints":"{\"Value\":{}}","ProjectActivitiesViewState":"{\"DeleteCategory.xaml\":[],\"InsertCategory - Copy.xaml\":[]}","ProjectWatches":"{\"Value\":[]}"}
