read.xaml updared

--- a/Category/.local/ProjectSettings.json
+++ b/Category/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"OpenedDocuments":"[\"update (2).xaml\"]","ProjectBreakpoints":"{\"Value\":{}}","ProjectActivitiesViewState":"{\"DeleteCategory.xaml\":[],\"InsertCategory - Copy.xaml\":[]}","ProjectWatches":"{\"Value\":[]}"}
+{"OpenedDocuments":"[\"Read.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}","ProjectActivitiesViewState":"{\"DeleteCategory.xaml\":[],\"InsertCategory - Copy.xaml\":[]}","ProjectWatches":"{\"Value\":[]}"}
